force-app/main/default/objects/FlowSettings__c/FlowSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>PacPoint - JB120618 - Created for BREG Phase 1. Used for fixed values that may change during the life of a flow</description>
    <label>FlowSettings</label>
</CustomObject>