force-app/main/default/objects/FlowSettings__c/fields/AccountRTDefaultBusiness__c.field-meta.xml
<CustomField>
    <fullName>AccountRTDefaultBusiness__c</fullName>
    <description>PacPoint-JB111418 - Created for BREG phase 1</description>
    <inlineHelpText>Enter the Default Business Account RecordType Id here for use in flows.</inlineHelpText>
    <label>AccountRTDefaultBusiness</label>
    <length>18</length>
    <type>Text</type>
</CustomField>