force-app/main/default/objects/FlowSettings__c/fields/AccountRTDefaultPerson__c.field-meta.xml
<CustomField>
    <fullName>AccountRTDefaultPerson__c</fullName>
    <description>PacPoint-JB121518 - Created for BREG phase 1</description>
    <label>AccountRTDefaultPerson</label>
    <length>18</length>
    <type>Text</type>
</CustomField>