force-app/main/default/objects/FlowSettings__c/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <description>PacPoint-JB111418 - Created for BREG phase 1</description>
    <label>Email2</label>
    <type>Email</type>
</CustomField>