force-app/main/default/objects/FlowSettings__c/fields/Email3__c.field-meta.xml
<CustomField>
    <fullName>Email3__c</fullName>
    <description>PacPoint-JB111418 - Created for BREG phase 1</description>
    <label>Email3</label>
    <type>Email</type>
</CustomField>