force-app/main/default/objects/FlowSettings__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>PacPoint-JB102418 - Created for BREG phase 1</description>
    <inlineHelpText>Email address of principal recipient of FaultMessages.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>